--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/116fd9d746.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://use.fontawesome.com/4485760e0e.js"></script>
 	</head>
 	<body class="is-preload">
 
@@ -36,21 +36,21 @@
 						<!-- Work -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="/images/Shana.png" alt="shana screencap" /></span>
-								<h3>Shana</h3>
+								<span class="image main"><img src="images/Shana.png" alt="shana screencap" /></span>
+								<h2>Shana</h2>
 								<p>A mock up portfolio page for a model done in HTML, CSS, CSS Animations and JQuery.</p>
 								<a href="https://github.com/angelyoung24/modelportfoliopage" class="icon brands fa-github"><span class="label">GitHub</span></a>
-								<a href="https://angelyoung24.github.io/modelportfoliopage/" class="icon fa-link"><span class="label">Link to page</span></a>
-								<span class="image main"><img src="/images/BucketList.png" alt="" /></span>
-								<h3>Bucket List</h3>
+								<a href="https://angelyoung24.github.io/modelportfoliopage/" class="icon fas fa-link"><span class="label">Link</span></a>
+								<span class="image main"><img src="images/BucketList.png" alt="bucket list screencap" /></span>
+								<h2>Bucket List</h2>
 								<p>Built on HTML, CSS, and ReactJS, this is a to do list which allows you to list things you always wanted to do.</p>
 								<a href="https://github.com/angelyoung24/bucket-list" class="icon brands fa-github"><span class="label">GitHub</span></a>
-								<a href="https://angelyoung24.github.io/bucket-list/" class="icon fa-link"><span class="label">Link to page</span></a>
-								<span class="image main"><img src="/images/degrassi.png" alt="" /></span>
-								<h3>Degrassi Next Class Word Game</h3>
+								<a href="https://angelyoung24.github.io/bucket-list/" class="icon fas fa-link"><span class="label">Link</span></a>
+								<span class="image main"><img src="images/degrassi.png" alt="degrassi next class word game screencap" /></span>
+								<h2>Degrassi Next Class Word Game</h2>
 								<p>A hangman type game built in HTML, CSS, and JavaScript.</p>
 								<a href="https://github.com/angelyoung24/Word_Game" class="icon brands fa-github"><span class="label">GitHub</span></a>
-								<a href="https://angelyoung24.github.io/Word_Game/" class="icon fa-link"><span class="label">Link to page</span></a>
+								<a href="https://angelyoung24.github.io/Word_Game/" class="icon fas fa-link"><span class="label">Link</span></a>
 							</article>
 
 						<!-- About -->
@@ -144,8 +144,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-envelope"><span class="label">Envelope</span></a></li>
+										<li><a href="#" class="icon fas fa-envelope"><span class="label">Envelope</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon fa-external-link-square-alt"><span class="label">Link</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
