fixed links for #projects

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
 								<h2>Shana</h2>
 								<p>A mock up portfolio page for a model done in HTML, CSS, CSS Animations and JQuery.</p>
 								<a href="https://github.com/angelyoung24/modelportfoliopage" class="icon brands fa-github"><span class="label">GitHub</span></a>
-								<a href="https://angelyoung24.github.io/modelportfoliopage/" class="icon fas fa-link"><span class="label">Link</span></a>
+								<a href="https://angelyoung24.github.io/modelportfoliopage/" ><span class="fas fa-link"></span></a>
 								<span class="image main"><img src="images/BucketList.png" alt="bucket list screencap" /></span>
 								<h2>Bucket List</h2>
 								<p>Built on HTML, CSS, and ReactJS, this is a to do list which allows you to list things you always wanted to do.</p>
 								<a href="https://github.com/angelyoung24/bucket-list" class="icon brands fa-github"><span class="label">GitHub</span></a>
-								<a href="https://angelyoung24.github.io/bucket-list/" class="icon fas fa-link"><span class="label">Link</span></a>
+								<a href="https://angelyoung24.github.io/bucket-list/" ><span class="fas fa-link"></span></a>
 								<span class="image main"><img src="images/degrassi.png" alt="degrassi next class word game screencap" /></span>
 								<h2>Degrassi Next Class Word Game</h2>
 								<p>A hangman type game built in HTML, CSS, and JavaScript.</p>
 								<a href="https://github.com/angelyoung24/Word_Game" class="icon brands fa-github"><span class="label">GitHub</span></a>
-								<a href="https://angelyoung24.github.io/Word_Game/" class="icon fas fa-link"><span class="label">Link</span></a>
+								<a href="https://angelyoung24.github.io/Word_Game/" ><span class="fas fa-link"></span></a>
 							</article>
 
 						<!-- About -->
@@ -146,8 +146,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fas fa-envelope"><span class="label">Envelope</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-external-link-square-alt"><span class="label">Link</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon fas fa-link"><span class="label">Link</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
