Added resume section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 							<ul>
 								<li><a href="#projects">Projects</a></li>
 								<li><a href="#about">About</a></li>
+								<li><a href="#resume">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -73,10 +74,16 @@
 								Toastmasters International and I volunteer at WHYY, the Philadelphia affiliate of PBS(Public Broadcast Systems), when ever they need me.In my spare time, I listen to podcasts and watch YouTube videos.I am a
 								lifelong fan of pop culture with an emphasis on soap operas.I do some photography from my Galaxy S8.</p>
 							</article>
-
+						<!-- Resume -->
+						<article id="resume">
+							<h2 class="major">Resume</h2>
+							<p>Click on the link below to download a PDF of my resume.</p>
+							<a href="https://drive.google.com/open?id=15RarpYun7HVjFAL4sPnYKC1WwyH0V8-A">View My Resume</a>
+						</article>
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+								<p>Feel free to contact me!</p>
 								<ul class="icons">
 									<li><a href="http://twitter.com/tornadosong" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="mailto:angel.m.young24@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
