--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<p>I am a Freelance Front-End Developer / Designer accepting clients and seeking full time work.I attended the
-								now - defunct The New York Code + Design Academy for Full Stack Web Development.I also volunteer
+								<p>I am a Front-End Developer / Designer accepting clients for freelance work and seeking full time work.I attended the
+								now - defunct The New York Code + Design Academy for Full Stack Web Development. I also volunteer
 								for Code for Philly and Philly Tech Sistas.</p>
 								<p>I have experience in HTML, CSS, SASS, Bootstrap, JavaScript, Angular, React, Ionic, JQuery, Ruby, Sinatra,
-								Python, WordPress / CMS, and Ruby on Rails.Through my time at the boot camp, I 've learned to grasp concepts
+								Python, WordPress / CMS, and Ruby on Rails. Through my time at the boot camp, I 've learned to grasp concepts
 								quickly and adapt to different situations.</p> 
-								<p>I am continuing to learn new languages and technologies in a further pursuit of self - study.I attend a
-								number of meetups per month to stay active in the community.I also have a goal to attend at least one tech
+								<p>I am continuing to learn new languages and technologies in a further pursuit of self - study. I attend a
+								number of meetups per month to stay active in the community. I also have a goal to attend at least one tech
 								conference a year.</p> 
 								<p>When I was in high school, I learned to develop small fan sites using HTML and CSS.
 								I wanted to be a web developer after realizing that the small fan sites I made in high school were something
-								I actually wanted to do full time.Google On The Edge: Edgemont
+								I actually wanted to do full time. Google On The Edge: Edgemont
 								for my first fan site built on Tripod (actually don’t google it you may get a virus.)</p> 
 								<p>I am Vice President Education of Panorama Toastmasters, a local chapter of
-								Toastmasters International and I volunteer at WHYY, the Philadelphia affiliate of PBS(Public Broadcast Systems), when ever they need me.In my spare time, I listen to podcasts and watch YouTube videos.I am a
-								lifelong fan of pop culture with an emphasis on soap operas.I do some photography from my Galaxy S8.</p>
+								Toastmasters International and I volunteer at WHYY, the Philadelphia affiliate of PBS(Public Broadcast Systems), when ever they need me. In my spare time, I listen to podcasts and watch YouTube videos. I am a
+								lifelong fan of pop culture with an emphasis on soap operas. I do some photography from my Galaxy S8.</p>
 							</article>
 						<!-- Resume -->
 						<article id="resume">
