--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Angel Young</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="/images/favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/116fd9d746.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
