--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<a href="https://github.com/angelyoung24/bucket-list" class="icon brands fa-github"><span
 						class="label">GitHub</span></a>
 				<a href="https://angelyoung24.github.io/bucket-list/"><span class="fas fa-link"></span></a>
-				<span class="image main"><img src="images/degrassi.png"
+				<span class="image main"><img src="images/degrassincwordgame.png"
 						alt="degrassi next class word game screencap" /></span>
 				<h2>Degrassi Next Class Word Game</h2>
 				<p>A hangman type game built in HTML, CSS, and JavaScript.</p>
