--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<article id="resume">
 				<h2 class="major">Resume</h2>
 				<p>Click on the link below to download a PDF of my resume.</p>
-				<a href="https://drive.google.com/open?id=15RarpYun7HVjFAL4sPnYKC1WwyH0V8-A">View My Resume</a>
+				<a href="https://drive.google.com/file/d/1NuRYIMtj0-xPXkUHKwarWabOZeA7-LYY/view?usp=sharing">View My Resume</a>
 			</article>
 			<!-- Contact -->
 			<article id="contact">
