added shipped and new background image

--- a/index.html
+++ b/index.html
@@ -55,13 +55,20 @@
 				<a href="https://github.com/angelyoung24/bucket-list" class="icon brands fa-github"><span
 						class="label">GitHub</span></a>
 				<a href="https://angelyoung24.github.io/bucket-list/"><span class="fas fa-link"></span></a>
-				<span class="image main"><img src="images/degrassincwordgame.png"
+				<span class="image main"><img src="images/degrassincwordgame.PNG"
 						alt="degrassi next class word game screencap" /></span>
 				<h2>Degrassi Next Class Word Game</h2>
 				<p>A hangman type game built in HTML, CSS, and JavaScript.</p>
 				<a href="https://github.com/angelyoung24/Word_Game" class="icon brands fa-github"><span
 						class="label">GitHub</span></a>
 				<a href="https://angelyoung24.github.io/Word_Game/"><span class="fas fa-link"></span></a>
+				<span class="image main"><img src="images/shippedinc.png"
+						alt="shipped inc screencap" /></span>
+				<h2>ShippedInc</h2>
+				<p>Build on Ruby on Rails, it's an app that tracks shipments. This was a group project for the former bootcamp The New York Code + Design Academy</p>
+				<a href="https://github.com/angelyoung24/NYCDA_Shipped" class="icon brands fa-github"><span
+						class="label">GitHub</span></a>
+				<a href="https://shippedinc.herokuapp.com/"><span class="fas fa-link"></span></a>
 			</article>
 
 			<!-- About -->
