added dev.to icon/link

--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
           <h2 class="major">Contact</h2>
           <p>Feel free to contact me!</p>
           <ul class="icons">
+            <li><a href="https://dev.to/angelyoung24">
+              <i class="fab fa-dev" title="angelyoung24's DEV Profile"></i>
+            </a></li>
             <li>
               <a
                 href="http://twitter.com/tornadosong"
