made a lot of changes

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
           <div class="inner">
             <h1>Angel Young</h1>
             <p>
-              Bootcamp graduate that loves all things web development. Looking
+              A self-taught programmer that loves all things web development. Looking
               for opportunities to get into the tech scene.
             </p>
           </div>
         </div>
         <nav>
           <ul>
+            <li><a href="#about">About</a></li>            
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#about">About</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -41,105 +41,17 @@
 
       <!-- Main -->
       <div id="main">
-        <!-- Work -->
-        <article id="projects">
-          <h2 class="major">Projects</h2>
-          <span class="image main"
-            ><img src="images/phillyresources.png" alt="shana screencap"
-          /></span>
-          <h2>Philly Tech Resources</h2>
-          <p>
-            Made with a template from HTML5up, this is a compiled list of tech
-            resources in Philadelphia, PA.
-          </p>
-          <a
-            href="https://github.com/angelyoung24/phillytechresources"
-            class="icon brands fa-github"
-            ><span class="label">GitHub</span></a
-          >
-          <a href="https://phillyresources.tech/"
-            ><span class="fas fa-link"></span
-          ></a>
-          <span class="image main"
-            ><img src="images/Shana.png" alt="shana screencap"
-          /></span>
-          <h2>Shana</h2>
-          <p>
-            A mock up portfolio page for a model done in HTML, CSS, CSS
-            Animations and JQuery.
-          </p>
-          <a
-            href="https://github.com/angelyoung24/modelportfoliopage"
-            class="icon brands fa-github"
-            ><span class="label">GitHub</span></a
-          >
-          <a href="https://angelyoung24.github.io/modelportfoliopage/"
-            ><span class="fas fa-link"></span
-          ></a>
-          <span class="image main"
-            ><img src="images/BucketList.png" alt="bucket list screencap"
-          /></span>
-          <h2>Bucket List</h2>
-          <p>
-            Built on HTML, CSS, and ReactJS, this is a to do list which allows
-            you to list things you always wanted to do.
-          </p>
-          <a
-            href="https://github.com/angelyoung24/bucket-list"
-            class="icon brands fa-github"
-            ><span class="label">GitHub</span></a
-          >
-          <a href="https://angelyoung24.github.io/bucket-list/"
-            ><span class="fas fa-link"></span
-          ></a>
-          <span class="image main"
-            ><img
-              src="images/degrassincwordgame.PNG"
-              alt="degrassi next class word game screencap"
-          /></span>
-          <h2>Degrassi Next Class Word Game</h2>
-          <p>A hangman type game built in HTML, CSS, and JavaScript.</p>
-          <a
-            href="https://github.com/angelyoung24/Word_Game"
-            class="icon brands fa-github"
-            ><span class="label">GitHub</span></a
-          >
-          <a href="https://angelyoung24.github.io/Word_Game/"
-            ><span class="fas fa-link"></span
-          ></a>
-          <span class="image main"
-            ><img src="images/shippedinc.png" alt="shipped inc screencap"
-          /></span>
-          <h2>ShippedInc</h2>
-          <p>
-            Build on Ruby on Rails, it's an app that tracks shipments. This was
-            a group project for the former bootcamp The New York Code + Design
-            Academy
-          </p>
-          <a
-            href="https://github.com/angelyoung24/NYCDA_Shipped"
-            class="icon brands fa-github"
-            ><span class="label">GitHub</span></a
-          >
-          <a href="https://shippedinc.herokuapp.com/"
-            ><span class="fas fa-link"></span
-          ></a>
-        </article>
-
-        <!-- About -->
+       <!-- About -->
         <article id="about">
           <h2 class="major">About</h2>
           <p>
-            I am a Front-End Developer / Designer accepting clients for
-            freelance work and seeking full time work.I attended the now -
-            defunct The New York Code + Design Academy for Full Stack Web
-            Development. I also volunteer for Code for Philly and Philly Tech
-            Sistas.
+            I am a Front-End Developer seeking full time work. I am also open to teaching oppuritunities.
+            I also volunteer for <a target="_blank" alt="Code for Philly Link" href="https://codeforphilly.org/">Code for Philly</a>, <a target="_blank" alt="TechGirlz Link" href="https://www.techgirlz.org/">TechGirlz</a>, and <a target="_blank" alt="Philly Tech Sistas Link" href="https://www.phillytechsistas.org/">Philly Tech
+            Sistas</a> .
           </p>
           <p>
             I have experience in HTML, CSS, SASS, Bootstrap, JavaScript,
-            Angular, React, Ionic, JQuery, Ruby, Sinatra, Python, WordPress /
-            CMS, and Ruby on Rails. Through my time at the boot camp, I 've
+            ReactJS, and GatsbyJS. Through my self-taught journey, I 've
             learned to grasp concepts quickly and adapt to different situations.
           </p>
           <p>
@@ -159,18 +71,101 @@
           <p>
             I am Vice President Education of Panorama Toastmasters, a local
             chapter of Toastmasters International and I volunteer at WHYY, the
-            Philadelphia affiliate of PBS(Public Broadcast Systems), when ever
+            Philadelphia affiliate of PBS (Public Broadcast Systems), when ever
             they need me. In my spare time, I listen to podcasts and watch
             YouTube videos. I am a lifelong fan of pop culture with an emphasis
             on soap operas. I do some photography from my Galaxy S8.
           </p>
         </article>
+             <!-- Work -->
+             <article id="projects">
+              <h2 class="major">Projects</h2>
+              <h4>These projects are a work in progress</h4>
+              <span class="image main"
+                ><img src="images/phillyresources.png" alt="shana screencap"
+              /></span>
+              <h2>Philly Tech Resources</h2>
+              <p>
+                Made with a template from HTML5up, this is a compiled list of tech
+                resources in Philadelphia, PA.
+              </p>
+              <a
+              target="_blank" href="https://github.com/angelyoung24/phillytechresources"
+                class="icon brands fa-github"
+                ><span class="label">GitHub</span></a
+              >
+              <a target="_blank" href="https://phillyresources.tech/"
+                ><span class="fas fa-link"></span
+              ></a>
+              <span class="image main"
+                ><img src="images/Shana.png" alt="shana screencap"
+              /></span>
+              <h2>Shana</h2>
+              <p>
+                A mock up portfolio page for a model done in HTML, CSS, CSS
+                Animations and JQuery.
+              </p>
+              <a
+              target="_blank" href="https://github.com/angelyoung24/modelportfoliopage"
+                class="icon brands fa-github"
+                ><span class="label">GitHub</span></a
+              >
+              <a target="_blank" href="https://angelyoung24.github.io/modelportfoliopage/"
+                ><span class="fas fa-link"></span
+              ></a>
+              <span class="image main"
+                ><img src="images/BucketList.png" alt="bucket list screencap"
+              /></span>
+              <h2>Bucket List</h2>
+              <p>
+                Built on HTML, CSS, and ReactJS, this is a to do list which allows
+                you to list things you always wanted to do.
+              </p>
+              <a
+              target="_blank" href="https://github.com/angelyoung24/bucket-list"
+                class="icon brands fa-github"
+                ><span class="label">GitHub</span></a
+              >
+              <a target="_blank" href="https://angelyoung24.github.io/bucket-list/"
+                ><span class="fas fa-link"></span
+              ></a>
+              <span class="image main"
+                ><img
+                  src="images/degrassincwordgame.PNG"
+                  alt="degrassi next class word game screencap"
+              /></span>
+              <h2>Degrassi Next Class Word Game</h2>
+              <p>A hangman type game built in HTML, CSS, and JavaScript.</p>
+              <a
+              target="_blank" href="https://github.com/angelyoung24/Word_Game"
+                class="icon brands fa-github"
+                ><span class="label">GitHub</span></a
+              >
+              <a target="_blank" href="https://angelyoung24.github.io/Word_Game/"
+                ><span class="fas fa-link"></span
+              ></a>
+              <span class="image main"
+                ><img src="images/tipcalculator.png" alt="Tip Calculator screencap"
+              /></span>
+              <h2>Tip Calculator</h2>
+              <p>
+                Built in JavaScript, this allows you to generate a tip based on American dollar amount, rank of service, and amout of people who ordered. This was for <a alt="Mintbean Link" href="https://www.mintbean.io/">Mintbean's Hackathon</a> on 05/04/2020.
+              </p>
+              <a
+              target="_blank" href="https://github.com/angelyoung24/2020-05-04-Interactive-Calculator"
+                class="icon brands fa-github"
+                ><span class="label">GitHub</span></a
+              >
+              <a target="_blank" href="https://angelyoung24.github.io/2020-05-04-Interactive-Calculator/"
+                ><span class="fas fa-link"></span
+              ></a>
+            </article>
         <!-- Resume -->
         <article id="resume">
           <h2 class="major">Resume</h2>
           <p>Click on the link below to download a PDF of my resume.</p>
-          <a
-            href="https://drive.google.com/file/d/1NuRYIMtj0-xPXkUHKwarWabOZeA7-LYY/view?usp=sharing"
+          <a alt="link to Angel Young's Resume"
+          target="_blank"  href="https://drive.google.com/file/d/1A2-CJlOXIo7eeR3vA8ztICW-0Q8cjpfY/view?usp=sharing"
             >View My Resume</a
           >
         </article>
@@ -179,33 +174,33 @@
           <h2 class="major">Contact</h2>
           <p>Feel free to contact me!</p>
           <ul class="icons">
-            <li><a href="https://dev.to/angelyoung24">
+            <li><a target="_blank" href="https://dev.to/angelyoung24">
               <i class="fab fa-dev" title="angelyoung24's DEV Profile"></i>
             </a></li>
             <li>
               <a
-                href="http://twitter.com/tornadosong"
+              target="_blank" href="http://twitter.com/tornadosong"
                 class="icon brands fa-twitter"
                 ><span class="label">Twitter</span></a
               >
             </li>
             <li>
               <a
-                href="mailto:angel.m.young24@gmail.com"
+                target="_blank" href="mailto:angel.m.young24@gmail.com"
                 class="icon fa-envelope"
                 ><span class="label">Email</span></a
               >
             </li>
             <li>
               <a
-                href="http://www.instagram.com/angel.young24"
+              target="_blank" href="http://www.instagram.com/angel.young24"
                 class="icon brands fa-instagram"
                 ><span class="label">Instagram</span></a
               >
             </li>
             <li>
               <a
-                href="http://www.github.com/angelyoung24"
+              target="_blank" href="http://www.github.com/angelyoung24"
                 class="icon brands fa-github"
                 ><span class="label">GitHub</span></a
               >
