added chingu project to project and references to chingu in about page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <h2 class="major">About</h2>
           <p>
             I am a Front-End Developer seeking full time work. I am also open to teaching oppuritunities.
+            I completed a bootcamp called <a target="_blank" alt="Chingu Link" href="http://www.chingu.io">Chingu</a> where I worked with a remote team from different time zones 
             I also volunteer for <a target="_blank" alt="Code for Philly Link" href="https://codeforphilly.org/">Code for Philly</a>, <a target="_blank" alt="TechGirlz Link" href="https://www.techgirlz.org/">TechGirlz</a>, and <a target="_blank" alt="Philly Tech Sistas Link" href="https://www.phillytechsistas.org/">Philly Tech
             Sistas</a> .
           </p>
@@ -69,7 +70,7 @@
             a virus.)
           </p>
           <p>
-            I am Vice President Education of Panorama Toastmasters, a local
+            I am currently Vice President Education of <a target="_blank" alt="Panorama Toastmasters link" href="http://www.panoramatoastmasters.org">Panorama Toastmasters</a> , a local
             chapter of Toastmasters International and I volunteer at WHYY, the
             Philadelphia affiliate of PBS (Public Broadcast Systems), when ever
             they need me. In my spare time, I listen to podcasts and watch
@@ -113,6 +114,22 @@
               <a target="_blank" href="https://angelyoung24.github.io/modelportfoliopage/"
                 ><span class="fas fa-link"></span
               ></a>
+              <span class="image main"
+              ><img src="images/Screen Shot 2020-05-11 at 12.14.06 PM.png" alt="Blog App screencap"
+            /></span>
+            <h2>Blog App</h2>
+            <p>
+              For Chingu Voyage 18 the Toucans team 05 created a blog application based on Dev.to. This was created over 6-weeks following the Agile Scrum methodology.
+              This project is based on several packages including Gatsby/React, Sass, and GraphQL.
+            </p>
+            <a
+            target="_blank" href="https://github.com/chingu-voyages/v18-toucans-team-05"
+              class="icon brands fa-github"
+              ><span class="label">GitHub</span></a
+            >
+            <a target="_blank" href="https://v18toucans05.netlify.app//"
+              ><span class="fas fa-link"></span
+            ></a>
               <span class="image main"
                 ><img src="images/BucketList.png" alt="bucket list screencap"
               /></span>
