--- a/index.html
+++ b/index.html
@@ -222,6 +222,13 @@
                 ><span class="label">GitHub</span></a
               >
             </li>
+            <li>
+              <a
+              target="_blank" href="http://www.twitch.tv/angelyoung24"
+                class="icon brands fa-twitch"
+                ><span class="label">Twitch</span></a
+              >
+            </li>
           </ul>
         </article>
 
